# Platform

./: .clang-tidy  .clang-uml  .env  .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Doxyfile  Makefile  README.md  conanfile.py  gcovr.cfg  gitmodules  remove_submodules.sh  vcpkg.json
config/: CMakeLists.txt  config.h.in
lib/Files/: ArffFiles.cc  ArffFiles.h
lib/log/: loguru.cpp  loguru.hpp
patches/: MPI_BUFFERING_ISSUE.md  progress_output_fix_FINAL.md  progress_output_fix_README.md  progress_output_fix_README_v2.md
sample/: CMakeLists.txt  sample.cc  sample.cpp
src/: CMakeLists.txt  b_manage.cc
src/Platform/: BestResultsExcel.cc  BestResultsExcel.h  BestScore.h  CMakeLists.txt  Colors.h  CommandParser.h  Datasets.cc  Datasets.h  Experiment.cc  Experiment.h  GridData.cc  GridData.h  GridSearch.cc  HyperParameters.h  ManageResults.cc  ManageResults.h  Models.h  ReportBase.cc  ReportConsole.cc  ReportConsole.h  ReportExcel.cc  Results.cc  Results.h  Symbols.h  b_best.cc  b_grid.cc  b_list.cc  b_main.cc  modelRegister.h
src/Platform/modules/: BestResults.cc  BestResultsExcel.cc  CLocale.h  Dataset.cc  ExcelFile.cc  Experiment.cc  Experiment.h  GridSearch.cc  GridSearch.h  HyperParameters.cc  Models.cc  PartialResult.h  Paths.h  ReportConsole.cc  ReportExcel.cc  ReportExcel.h  Result.cc  Result.h  Results.cc  Statistics.cc  modelRegister.h
src/best/: BestResults.cc  BestResults.cpp  BestResults.h  BestResultsExcel.cc  BestResultsExcel.cpp  BestResultsExcel.h  BestResultsMd.cpp  BestResultsMd.h  BestResultsTex.cpp  BestResultsTex.h  BestScore.h  DeLong.cpp  DeLong.h  Statistics.cc  Statistics.cpp  Statistics.h  WilcoxonTest.hpp  b_best.cc  b_best.cpp
src/commands/: b_best.cpp  b_grid.cpp  b_list.cpp  b_main.cpp  b_manage.cpp  b_results.cpp
src/common/: CLocale.h  Colors.h  Dataset.cc  Dataset.cpp  Dataset.h  Datasets.cc  Datasets.cpp  Datasets.h  Discretization.cpp  Discretization.h  DiscretizationRegister.h  DotEnv.h  Paths.h  SourceData.h.in  Symbols.h  TensorUtils.h  TensorUtils.hpp  Timer.h  Utils.h
src/experimental_clfs/: AdaBoost.cpp  AdaBoost.h  CountingSemaphore.hpp  DecisionTree.cpp  DecisionTree.h  ExpClf.cpp  ExpClf.h  ExpEnsemble.cpp  ExpEnsemble.h  README.md  TensorUtils.hpp  XA1DE.cpp  XA1DE.h  XBAODE.cpp  XBAODE.h  XSpode.hpp  Xaode.hpp  Xaode2.hpp
src/grid/: GridBase.cpp  GridBase.h  GridConfig.h  GridData.cpp  GridData.h  GridExperiment.cpp  GridExperiment.h  GridFunctions.cpp  GridSearch.cc  GridSearch.cpp  GridSearch.h  b_grid.cc  b_grid.cpp
src/list/: DatasetsExcel.cc  DatasetsExcel.h  ResultsDataset.cpp  ResultsDataset.h  ResultsDatasetExcel.cpp  b_list.cc  b_list.cpp
src/main/: ArgumentsExperiment.cpp  ArgumentsExperiment.h  Experiment.cpp  Experiment.h  HyperParameters.cpp  HyperParameters.h  Models.cc  Models.cpp  Models.h  PartialResult.h  Result.cc  Result.cpp  Result.h  RocAuc.cpp  RocAuc.h  Scores.cpp  Scores.h  b_main.cc  b_main.cpp  modelRegister.h
src/manage/: CommandParser.cc  CommandParser.cpp  CommandParser.h  ManageResults.cc  ManageResults.cpp  ManageResults.h  ManageScreen.cpp  ManageScreen.h  OptionsMenu.cpp  OptionsMenu.h  Paginator.hpp  Results.cc  Results.h  ResultsManager.cc  ResultsManager.cpp  ResultsManager.h  b_manage.cpp
src/modules/: BestResults.cc  BestResultsExcel.cc  ExcelFile.cc  ExcelFile.h  Experiment.cc  ManageResults.cc  PartialResult.h  ReportConsole.cc  ReportExcel.cc
src/reports/: DatasetsConsole.cpp  DatasetsConsole.h  DatasetsConsole.hpp  DatasetsExcel.cpp  DatasetsExcel.h  ExcelFile.cc  ExcelFile.cpp  ExcelFile.h  ReportBase.cc  ReportBase.cpp  ReportBase.h  ReportConsole.cc  ReportConsole.cpp  ReportConsole.h  ReportExcel.cc  ReportExcel.cpp  ReportExcel.h  ReportExcelCompared.cc  ReportExcelCompared.cpp  ReportExcelCompared.h  ReportsPaged.cpp  ReportsPaged.h  ResultsDatasetConsole.cpp  ResultsDatasetConsole.h
src/results/: JsonValidator.h  Result.cpp  Result.h  ResultsDataset.cpp  ResultsDataset.h  ResultsDatasetConsole.cpp  ResultsDatasetConsole.h  ResultsDatasetConsole.hpp  ResultsDatasetExcel.cpp  ResultsDatasetExcel.h  SchemaV1_0.h
tests/: CMakeLists.txt  TestAdaBoost.cpp  TestDecisionTree.cpp  TestPlatform.cc  TestPlatform.cpp  TestResult.cc  TestResult.cpp  TestScores.cpp  TestUtils.cc  TestUtils.cpp  TestUtils.h
tests/data/: all.txt
